[package]
name = "kaleidoscope"
version = "0.1.0"
authors = ["Joshua Gross <joshua.gross@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nom = "6.0.0"
combine-language = "3.0.1"
#llvm-ir = { version = "0.7.4", features = ["llvm-11"] }
